# jsonschema-lint

./: CHANGELOG.md  README.md  mypy.ini  pyproject.toml
.github/workflows/: main.yml
jsonschema_lint/: __init__.py  compat.py  linter.py  utils.py
jsonschema_lint/_cli/: __init__.py  constants.py  main.py  resolver.py  rule_loader.py  schema_loader.py
jsonschema_lint/json_ast/: __init__.py  errors.py  location.py  nodes.py  parser.py  tokenizer.py
jsonschema_lint/yaml_ast/: __init__.py  errors.py  parser.py  utils.py
tasks/: __init__.py  helpers.py  release.py
tests/: test_cli.py  test_linter.py  test_utils.py  test_version.py
tests/assets/extra/remote-schema/: .jsonschema-lint
tests/assets/extra/remote-schema/instances/: 001.json  002.json
tests/assets/extra/yaml-schema/: .jsonschema-lint
tests/assets/extra/yaml-schema/instances/: 001.json  002.json
tests/assets/simple/: .jsonschema-lint
tests/assets/simple/numbers/: schema.json
tests/assets/simple/numbers/instances/: 001.yaml  002.json  002.yaml
tests/assets/simple/object/: schema.json
tests/assets/simple/object/instances/: 002.json  002.yml
tests/json_ast/: test_nodes.py  test_parser.py  test_tokenizer.py
tests/yaml_ast/: test_parser.py
