[tool.poetry]
name = "jsonschema-lint"
version = "0.1.0"
description = "Linter for JSON Schema instances."
authors = ["Jack Smith"]
packages = [
    {include = "jsonschema_lint"},
]
homepage = "https://github.com/jacksmith15/jsonschema-lint"
repository = "https://github.com/jacksmith15/jsonschema-lint"
readme = "README.md"

[tool.poetry.scripts]
jsonschema-lint = "jsonschema_lint:run_cli"

[tool.poetry.dependencies]
python = "^3.8"
jsonschema = "^4.2.1"
click = "^8.0.3"
PyYAML = {version = "^6.0", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
toml = "^0.10"
ipdb = "^0.13.7"
ipython = "^7.22.0"
mypy = "^0.812"
pyflakes = "^2.3.1"
invoke = "^1.5.0"
termcolor = "^1.1.0"
pytest-cov = "^2.11.1"
changelog-cmd = "^0.2.0"

[tool.poetry.extras]
yaml = ["PyYAML"]

[tool.isort]
# Setting compatible with black. See https://black.readthedocs.io/en/stable/compatible_configs.html
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.black]
line-length = 120
target-version = ['py38']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
